fix: Center align text and set width for title and description in epigenetica component

--- a/src/app/components/epigenetica/epigenetica.component.scss
+++ b/src/app/components/epigenetica/epigenetica.component.scss
@@ -88,6 +88,8 @@
     font-size: 2.5rem;
     margin-bottom: 1rem;
     line-height: 1;
+    text-align: center;
+    width: 100%;
   }
 
   &__title {
@@ -95,6 +97,7 @@
     font-size: 1.2rem;
     color: $primary-dark;
     margin-bottom: 0.75rem;
+    text-align: center;
   }
 
   &__text {
